--- a/Media/css/NavBar.css
+++ b/Media/css/NavBar.css
@@ -10,8 +10,13 @@
   padding: 40px; 
   display: flex; 
   align-items: center; 
+  position: fixed; 
+  top: 0; 
+  width: 100%; 
+  z-index: 1000; 
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
+  height: 200px;
 }
-
 ul {
   text-decoration: none;
   display: flex; 
