--- a/Views/index.html
+++ b/Views/index.html
@@ -4,12 +4,38 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link src="/Media/js/index.js">
+  <link rel="stylesheet" href="/Media/css/Styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <title>Medira</title>
 </head>
 <body>
   <div id="navbar">
     <script src="/Media/js/index.js"></script>
-  </div> 
-  
+  </div>
+
+  <div class="image-container">
+    <img src="/Media/images/Picture.jpg" alt="Beautiful scenery">
+    <p><b>Welcome to Medira</b></p>
+    <h2>Empowering healthcare through NLP-driven insights.</h2>
+    <h3>Our accurate answers lead to better decisions.</h3>
+    <div class="button-container">
+      <button class="Started">Get Started</button>
+      <button class="Learn">Learn More</button>
+    </div>
+  </div>
+  <footer>
+    <div class="footer-content">
+      <img src="/Media/images/logo.png" alt="Medira Logo" class="footer-logo"> 
+      <nav>
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Discussion Forum</a></li>
+        </ul>
+      </nav>
+    </div>
+    <p>&copy; 2024 MediaCare. All rights reserved. </p>Empowering healthcare professionals and patients with reliable medical information.
+  </footer>
 </body>
 </html>
