--- a/Views/NavBar.html
+++ b/Views/NavBar.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<nav class="navbar">
-			<div class="logo"><a href="#"><img src="/Media/images/Screenshot 2024-10-18 202302.png" ></a> </div>
+			<div class="logo"><a href="#"><img src="/Media/images/LOGO.png" ></a> </div>
 			<ul>
 				<li><a href="#">Home</a></li>
 				<li><a href="#">About</a></li>
