--- a/Views/NavBar.html
+++ b/Views/NavBar.html
@@ -14,7 +14,7 @@
 				<li><a href="#">About</a></li>
 				<li><a href="#">Discussion Forum</a></li>
         <li><a href="#">Contact Us</a></li>
-				<button class="Signup" onclick="location.href='#';">SignUp</button>
+				<button class="Signup" onclick="location.href='/signup';">SignUp</button>
         <button class="SignIn" onclick="location.href='#';">SignIn</button>
 			</ul>
 	</nav>
