--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -36,7 +36,7 @@
         </ul>
       </nav>
     </div>
-    <p>&copy; 2024 MediaCare. All rights reserved. </p>Empowering healthcare professionals and patients with reliable medical information.
+    <p>&copy; 2024 Medira. All rights reserved. </p>Empowering healthcare professionals and patients with reliable medical information.
   </footer>
 </body>
 </html>
