--- a/Views/NavBar.ejs
+++ b/Views/NavBar.ejs
@@ -10,9 +10,9 @@
 	<nav class="navbar">
 			<div class="logo"><a href="#"><img src="/images/LOGO.png" ></a> </div>
 			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Discussion Forum</a></li>
+				<li><a href="/">Home</a></li>
+				<li><a href="/">About</a></li>
+				<li><a href="/">Discussion Forum</a></li>
         <li><a href="#">Contact Us</a></li>
 				<button class="Signup" onclick="location.href='/signup';">SignUp</button>
         <button class="SignIn" onclick="location.href='#';">SignIn</button>
