--- a/Media/css/signup.css
+++ b/Media/css/signup.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    /* font-family: sans-serif; */
+    font-family: sans-serif;
 }
 
 body{
@@ -12,6 +12,21 @@ body{
     align-items: center;
     background-image: url(/images/Picture.jpg);
     background-size: cover;
+    
+}
+
+body::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('/images/Picture.jpg');
+    background-size: cover;
+    background-position: center;
+    filter: blur(10px); /* Adjust the blur as needed */
+    z-index: -1; /* Ensures it stays behind the content */
 }
 .center-container{
     display: flex;
@@ -98,16 +113,8 @@ body{
 #day ,
 #month
  {
-    margin-right: 8px;
+    margin-right: 10px;
 }
-
-/* .gender-details-box{
-    display: grid;
-    grid-template-columns: 150px 150px 150px;
-    column-gap: 10px ;
-    justify-content: center;
-    align-items: center;
-} */
 
 .gender-category label{
     padding: 0 20px 0 5px;
