--- a/Views/NavBar.ejs
+++ b/Views/NavBar.ejs
@@ -13,7 +13,7 @@
 				<li><a href="/">Home</a></li>
 				<li><a href="/">About</a></li>
 				<li><a href="/">Discussion Forum</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="/ContactUs">Contact Us</a></li>
 				<button class="Signup" onclick="location.href='/signup';">SignUp</button>
         <button class="SignIn" onclick="location.href='#';">SignIn</button>
 			</ul>
