--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -17,26 +17,25 @@
   </div>
 
   <div class="image-container">
-    <img src="/images/Picture.jpg" alt="Beautiful scenery">
+    <!-- <img src="/images/Picture.jpg" alt="Beautiful scenery"> -->
     <p><b>Welcome to Medira</b></p>
-    <h2>Empowering healthcare through NLP-driven insights.</h2>
-    <h3>Our accurate answers lead to better decisions.</h3>
+    <h2>Empowering healthcare professionals and patients with accurate medical <br>answers. Discover how our NLP-driven system enhances clinical decision-<br>making.</h2>
     <div class="button-container">
-      <button class="Started">Get Started</button>
-      <button class="Learn">Learn More</button>
+      <button class="Started" onclick="location.href='/signin';">Get Started</button>
+      <button class="Learn" onclick="location.href='/About';" >Learn More</button>
     </div>
   </div>
   <footer>
     <div class="footer-content">
-      <img src="./images/LOGO.png" alt="Medira Logo" class="footer-logo"> 
+      <h3><img src="./images/LOGO.png" alt="Medira Logo" class="footer-logo"></h3> 
       <nav>
         <ul>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Discussion Forum</a></li>
+          <li><a href="/About">About</a></li>
+          <li><a href="/Discussion Forum">Discussion Forum</a></li>
         </ul>
       </nav>
+      <p>&copy; 2024 Medira. All rights reserved. </p>Empowering healthcare professionals and patients with reliable medical information.
     </div>
-    <p>&copy; 2024 Medira. All rights reserved. </p>Empowering healthcare professionals and patients with reliable medical information.
   </footer>
 </body>
 </html>
