--- a/Views/Signup.ejs
+++ b/Views/Signup.ejs
@@ -8,6 +8,8 @@
       initial-scale=1.0" />
     <link rel="stylesheet" href="/css/signup.css">
     <link rel="stylesheet" href="/css/NavBar.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="/js/login.js"></script>
 
 </head>
 
@@ -20,7 +22,7 @@
     <div class="center-container">
         <div class="container">
             <h1 class="form-title">SignUp</h1>
-            <form action="/user/addUser" method="post" onsubmit="">
+            <form action="/user/addUser" method="post" onsubmit="validateForm(event)">
                 <div class="main-user-info">
                     <div class="user-input-box">
                         <label for="fullName">Full Name</label>
