Login validate and backend

--- a/Views/NavBar.ejs
+++ b/Views/NavBar.ejs
@@ -15,7 +15,7 @@
 				<li><a href="/">Discussion Forum</a></li>
         <li><a href="/ContactUs">Contact Us</a></li>
 				<button class="Signup" onclick="location.href='/signup';">SignUp</button>
-        <button class="SignIn" onclick="location.href='#';">SignIn</button>
+        <button class="SignIn" onclick="location.href='/login';">SignIn</button>
 			</ul>
 	</nav>
 </body>
