--- a/Media/css/Admin.css
+++ b/Media/css/Admin.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     font-family: Arial, sans-serif;
     margin: 20px;
 }
@@ -45,4 +45,146 @@ th {
     color: white;
     border: none;
     cursor: pointer;
+} */
+body {
+    font-family: Arial, sans-serif;
 }
+
+header {
+    background-color: white;
+    color: black;
+    padding: 1rem;
+  
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline;
+    margin: 0 15px;
+}
+
+main {
+    padding: 2rem;
+}
+
+table {
+    width: 80%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+
+table, th, td {
+    border: 1px solid rgb(13, 128, 228);
+}
+
+th, td {
+    padding: 10px;
+    text-align: left;
+}
+
+button {
+    padding: 5px 10px;
+    margin: 5px;
+}
+
+button.delete {
+    background-color: red;
+    color: white;
+}
+
+.modal {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 2rem;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: none;
+}
+
+.add-Admin {
+    margin: 20px 0;
+}
+* {
+    margin: 0;
+    padding: 0; 
+    box-sizing: border-box; 
+    font-family: sans-serif;
+  }
+  
+  .navbar {
+    background: white; 
+    font-family: calibri; 
+    padding: 40px; 
+    display: flex; 
+    align-items: center; 
+    position: fixed; 
+    top: 0; 
+    width: 100%; 
+    z-index: 1000; 
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
+    height: 120px;
+  }
+  ul {
+    text-decoration: none;
+    display: flex; 
+    align-items: center; 
+    margin-left: auto; 
+  }
+  .logo img {
+    width: 250px;  
+    height: 100px;
+  }
+  li {
+    text-decoration: none;
+    list-style: none; 
+    margin-right: 120px; 
+  }
+  
+  li a {
+    text-decoration: none;
+    color: white; 
+    font-size: 25px; 
+    font-weight: bold; 
+  }
+  
+  /* Button styles */
+  button {
+    border: none; 
+    border-radius: 50px; 
+    padding: 25px 30px; 
+    cursor: pointer; 
+    font-size: 20px; 
+    margin-left: 30px; 
+    transition: background-color 0.3s, color 0.3s, border 0,3s, box-shadow 0.3s; 
+    background-color:  rgb(0, 140, 255);
+  }
+  #Sign_Out{
+    color:rgb(0, 144, 255);
+    border: 2px solid white;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 3px 3px 0px rgba(0, 0, 0, 1.5);
+  }
+  #Sign_Out:hover{
+    background-color: rgb(0, 140, 255);
+    color:white;
+    transition: 0.5s;
+  }
+  .SignIn{
+    color:white;
+    border: 1px solid black;
+    box-shadow: 3px 3px 0px rgba(0, 0, 0, 1.5);
+  }
+  .SignIp:hover{
+    transition: 0.5s;
+  }
+  .td{
+
+    color: aliceblue;
+    width: 30%;
+  }
