--- a/Views/ContactUs.ejs
+++ b/Views/ContactUs.ejs
@@ -36,7 +36,7 @@
   <div class="contact-info">
     <div>
       <i class="ri-map-pin-line"></i>
-      <span> 54 share3 Mabna Almain bng far8al</span>
+      <span> 54 share3 Mabna Almain gnb far8al </span>
     </div>
     <div>
       <i class="ri-phone-fill"></i>
