--- a/Views/login.ejs
+++ b/Views/login.ejs
@@ -21,7 +21,7 @@
 
     <div class="center-container">
         <div class="container">
-            <h1 class="form-title">SignUp</h1>
+            <h1 class="form-title">Login</h1>
             <form action="/loging" method="post" onsubmit="return validateLogin()">
                 <div class="main-user-info">
                     
