--- a/Views/NavBar.ejs
+++ b/Views/NavBar.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<nav class="navbar">
-			<div class="logo"><a href="#"><img src="/images/LOGO.png" ></a> </div>
+			<div class="logo"><a href="/"><img src="/images/LOGO.png" ></a> </div>
 			<ul>
 				<li><a href="/">Home</a></li>
 				<li><a href="/">About</a></li>
