--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div id="navbar">
-    <%- include("./NavBar.ejs") %>
+    <!-- <%- include("./NavBar.ejs") %> -->
   </div>
 
   <div class="image-container">
@@ -21,7 +21,7 @@
     <p><b>Welcome to Medira</b></p>
     <h2>Empowering healthcare professionals and patients with accurate medical <br>answers. Discover how our NLP-driven system enhances clinical decision-<br>making.</h2>
     <div class="button-container">
-      <button class="Started" onclick="location.href='/login';">Get Started</button>
+      <button id="start"class="Started" onclick="location.href='/login';">Get Started</button>
       <button class="Learn" onclick="location.href='/About';" >Learn More</button>
     </div>
   </div>
