--- a/Views/Admin.ejs
+++ b/Views/Admin.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard - User Management</title>
     <link rel="stylesheet" href="/css/Admin.css">
+    <link rel="stylesheet" href="/css/NavBar.css">
 </head>
 <body>
 
@@ -93,7 +94,7 @@
 </head>
 <body>
   <div id="navbar">
-    <%- include("./Adminnav.ejs") %>
+    <%- include("./NavBar.ejs") %>
   </div>
 
   <div class="image-container">
