--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div id="navbar">
-    <!-- <%- include("./NavBar.ejs") %> -->
+    <%- include("./NavBar.ejs") %>
   </div>
 
   <div class="image-container">
