--- a/Views/NavBar.ejs
+++ b/Views/NavBar.ejs
@@ -5,9 +5,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Medira</title>
   <link rel="stylesheet" href="/css/NavBar.css">
+  
 </head>
 <body>
-	<nav class="navbar">
+	
+</body>
+<script>
+	 function change(){
+      let path = window.location.pathname;
+      if (path.startsWith('/user')) {
+          document.getElementById('navbar').innerHTML = `<nav class="navbar">
+			<div class="logo"><a href="/"><img src="/images/LOGO.png" ></a> </div>
+			<ul>
+				<li><a href="/">Home</a></li>
+				<li><a href="/">About</a></li>
+				<li><a href="/">Discussion Forum</a></li>
+        <li><a href="/ContactUs">Contact Us</a></li>
+				<button class="Signup" onclick="location.href='/signup';">SignOut</button>
+        
+			</ul>
+	</nav>`
+      }else if(path.startsWith('/admin')){
+		document.getElementById('navbar').innerHTML = `<nav class="navbar">
+			<div class="logo"><a href="#"><img src="/images/LOGO.png" ></a> </div>
+			<ul>
+                <h2>Admin Dashboard</h2>
+				<li><a href="/">User Management</a></li>
+                <li><a href="/">Questions</a></li>
+				<li><a href="/">Analytics</a></li>
+				<li><a href="/"> </a>Settings</li>
+       
+				<button class="Sign_out" onclick="location.href='/sign_OUT';">Sign Out</button>
+        
+			</ul>
+	</nav>`
+	  }else{
+		document.getElementById('navbar').innerHTML = `<nav class="navbar">
 			<div class="logo"><a href="/"><img src="/images/LOGO.png" ></a> </div>
 			<ul>
 				<li><a href="/">Home</a></li>
@@ -17,6 +50,9 @@
 				<button class="Signup" onclick="location.href='/signup';">SignUp</button>
         <button class="SignIn" onclick="location.href='/login';">SignIn</button>
 			</ul>
-	</nav>
-</body>
+	</nav>`
+	  }
+    }
+    window.addEventListener('DOMContentLoaded', change);
+</script>
 </html>
