--- a/Views/NavBar.ejs
+++ b/Views/NavBar.ejs
@@ -39,6 +39,16 @@
         
 			</ul>
 	</nav>`
+	  }else if(path.startsWith('/HealthCare')){
+		document.getElementById('navbar').innerHTML = `<nav class="navbar">
+			<div class="logo"><a href="#"><img src="/images/LOGO.png" ></a> </div>
+			<ul>
+				<li><a href="/">Home</a></li>
+                <li><a href="/">Discussion Forum</a></li>
+				<button class="Sign_out" onclick="location.href='/sign_OUT';">Sign Out</button>
+        
+			</ul>
+	</nav>`
 	  }else{
 		document.getElementById('navbar').innerHTML = `<nav class="navbar">
 			<div class="logo"><a href="/"><img src="/images/LOGO.png" ></a> </div>
