--- a/Views/ContactUs.ejs
+++ b/Views/ContactUs.ejs
@@ -8,6 +8,8 @@
     href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
     rel="stylesheet"
 />
+<link rel="stylesheet" href="/css/Styles.css">
+<link rel="stylesheet" href="/css/Feedback.css">
 <link rel="stylesheet" href="/css/ContactUs.css">
 <link rel="stylesheet" href="/css/NavBar.css">
 </head>
@@ -60,5 +62,6 @@
       <i class="ri-linkedin-fill"></i>
     </a>
   </div>
+  <div class="feedback-button" id="feedbackButton" onclick="location.href='/Feedback';">Feedback</div>  
 </body>
 </html>
