--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link src="/Media/js/index.js">
+  <script src="js/index.js" defer></script>
   <link rel="stylesheet" href="/css/NavBar.css">
   <link rel="stylesheet" href="/css/Styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -37,5 +37,6 @@
       <p>&copy; 2024 Medira. All rights reserved. </p>Empowering healthcare professionals and patients with reliable medical information.
     </div>
   </footer>
+  <div class="feedback-button" id="feedbackButton" onclick="location.href='/Feedback';">Feedback</div>  
 </body>
 </html>
