--- a/Media/css/Styles.css
+++ b/Media/css/Styles.css
@@ -142,6 +142,25 @@ footer nav ul li a {
   line-height: 3rem;
   color: #007bff; 
 }
+.feedback-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: rgb(0, 144, 255);
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 50%;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    font-size: 16px;
+    transition: transform 0.3s ease;
+}
+
+.feedback-button:hover {
+    transform: scale(1.1); /* Slightly enlarge on hover */
+}
+
 
 
 
