--- a/Views/NavBar.ejs
+++ b/Views/NavBar.ejs
@@ -19,7 +19,7 @@
 			<ul>
 				<li><a href="/">Home</a></li>
 				<li><a href="/">About</a></li>
-				<li><a href="/">Discussion Forum</a></li>
+				<li><a href="/DiscussionForum">Discussion Forum</a></li>
         <li><a href="/ContactUs">Contact Us</a></li>
 				<button class="Signup" onclick="location.href='/signup';">SignOut</button>
         
@@ -55,7 +55,7 @@
 			<ul>
 				<li><a href="/">Home</a></li>
 				<li><a href="/">About</a></li>
-				<li><a href="/">Discussion Forum</a></li>
+				<li><a href="/DiscussionForum">Discussion Forum</a></li>
         <li><a href="/ContactUs">Contact Us</a></li>
 				<button class="Signup" onclick="location.href='/signup';">SignUp</button>
         <button class="SignIn" onclick="location.href='/login';">SignIn</button>
