Chat and updates

--- a/Views/NavBar.ejs
+++ b/Views/NavBar.ejs
@@ -18,10 +18,9 @@
 			<div class="logo"><a href="/"><img src="/images/LOGO.png" ></a> </div>
 			<ul>
 				<li><a href="/">Home</a></li>
-				<li><a href="/">About</a></li>
 				<li><a href="/DiscussionForum">Discussion Forum</a></li>
         <li><a href="/ContactUs">Contact Us</a></li>
-				<button class="Signup" onclick="location.href='/signup';">SignOut</button>
+				<button class="Signup" onclick="location.href='/user/logout';">SignOut</button>
         
 			</ul>
 	</nav>`
@@ -35,7 +34,7 @@
 				<li><a href="/">Analytics</a></li>
 				<li><a href="/"> </a>Settings</li>
        
-				<button class="Sign_out" onclick="location.href='/sign_OUT';">Sign Out</button>
+				<button class="Sign_out" onclick="location.href='/admin/logout';">Sign Out</button>
         
 			</ul>
 	</nav>`
@@ -45,7 +44,7 @@
 			<ul>
 				<li><a href="/">Home</a></li>
                 <li><a href="/">Discussion Forum</a></li>
-				<button class="Sign_out" onclick="location.href='/sign_OUT';">Sign Out</button>
+				<button class="Sign_out" onclick="location.href='/HealthCare/logout';">Sign Out</button>
         
 			</ul>
 	</nav>`
@@ -54,7 +53,6 @@
 			<div class="logo"><a href="/"><img src="/images/LOGO.png" ></a> </div>
 			<ul>
 				<li><a href="/">Home</a></li>
-				<li><a href="/">About</a></li>
 				<li><a href="/DiscussionForum">Discussion Forum</a></li>
         <li><a href="/ContactUs">Contact Us</a></li>
 				<button class="Signup" onclick="location.href='/signup';">SignUp</button>
