--- a/Views/Chat.ejs
+++ b/Views/Chat.ejs
@@ -1,30 +1,23 @@
 <!DOCTYPE html>
-<!-- Coding By CodingNepal - www.codingnepalweb.com -->
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Chatbot in JavaScript | CodingNepal</title>
     <link rel="stylesheet" href="/css/Chat.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Google Fonts Link For Icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0" />
     <script src="/js/Chat.js" defer></script>
   </head>
-  <body>
-    <button class="chatbot-toggler">
-      <span class="material-symbols-rounded">mode_comment</span>
-      <span class="material-symbols-outlined">close</span>
-    </button>
+  <body class="show-chatbot">  <!-- Add class to open the chatbot by default -->
     <div class="chatbot">
       <header>
         <h2>Chatbot</h2>
-        <span class="close-btn material-symbols-outlined">close</span>
       </header>
       <ul class="chatbox">
         <li class="chat incoming">
           <span class="material-symbols-outlined">smart_toy</span>
-          <p>Hi there <br>How can I help you today?</p>
+          <p>Hi there <br>How can I help you today?<br>Please provide your symptoms</p>
         </li>
       </ul>
       <div class="chat-input">
@@ -32,6 +25,5 @@
         <span id="send-btn" class="material-symbols-rounded">send</span>
       </div>
     </div>
-
   </body>
 </html>
