--- a/Views/NavBar.ejs
+++ b/Views/NavBar.ejs
@@ -17,9 +17,9 @@
           document.getElementById('navbar').innerHTML = `<nav class="navbar">
 			<div class="logo"><a href="/"><img src="/images/LOGO.png" ></a> </div>
 			<ul>
-				<li><a href="/">Home</a></li>
-				<li><a href="/DiscussionForum">Discussion Forum</a></li>
-        <li><a href="/ContactUs">Contact Us</a></li>
+				<li><a href="/user">Home</a></li>
+				<li><a href="/user/DiscussionForum">Discussion Forum</a></li>
+        <li><a href="/user/ContactUs">Contact Us</a></li>
 				<button class="Signup" onclick="location.href='/user/logout';">SignOut</button>
         
 			</ul>
@@ -42,8 +42,8 @@
 		document.getElementById('navbar').innerHTML = `<nav class="navbar">
 			<div class="logo"><a href="#"><img src="/images/LOGO.png" ></a> </div>
 			<ul>
-				<li><a href="/">Home</a></li>
-                <li><a href="/">Discussion Forum</a></li>
+				<li><a href="/HealthCare">Home</a></li>
+                <li><a href="/HealthCare/DiscussionForum">Discussion Forum</a></li>
 				<button class="Sign_out" onclick="location.href='/HealthCare/logout';">Sign Out</button>
         
 			</ul>
@@ -53,7 +53,7 @@
 			<div class="logo"><a href="/"><img src="/images/LOGO.png" ></a> </div>
 			<ul>
 				<li><a href="/">Home</a></li>
-				<li><a href="/DiscussionForum">Discussion Forum</a></li>
+				<li><a href="//DiscussionForum">Discussion Forum</a></li>
         <li><a href="/ContactUs">Contact Us</a></li>
 				<button class="Signup" onclick="location.href='/signup';">SignUp</button>
         <button class="SignIn" onclick="location.href='/login';">SignIn</button>
