--- a/Views/NavBar.ejs
+++ b/Views/NavBar.ejs
@@ -53,7 +53,7 @@
 			<div class="logo"><a href="/"><img src="/images/LOGO.png" ></a> </div>
 			<ul>
 				<li><a href="/">Home</a></li>
-				<li><a href="//DiscussionForum">Discussion Forum</a></li>
+				<li><a href="/DiscussionForum">Discussion Forum</a></li>
         <li><a href="/ContactUs">Contact Us</a></li>
 				<button class="Signup" onclick="location.href='/signup';">SignUp</button>
         <button class="SignIn" onclick="location.href='/login';">SignIn</button>
